[package]
name = "ywkv"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
axum = { version = "0.6", features = ["http2", "headers"] }
clap = "4.2"
redb = "0.17"
serde = { version = "1.0", features = ["derive"] }
thiserror = "1.0"
tokio = { version = "1.28", features = ["full"] }
tower-http = { version = "0.4", features = ["compression-full", "auth"] }
